--- a/src/NetArchTest.Rules/NetArchTest.Rules.csproj
+++ b/src/NetArchTest.Rules/NetArchTest.Rules.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>Ben Morris</Authors>
     <Product>NetArchTest</Product>
     <Description>A fluent API for .Net Standard that can enforce architectural rules in unit tests.</Description>
@@ -13,6 +13,14 @@
     <RepositoryUrl>https://github.com/BenMorris/NetArchTest</RepositoryUrl>
     <PackageTags>test architecture dependencies archtest</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\Work\NetArchTest\src\NetArchTest.Rules\NetArchTest.Rules.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\Work\NetArchTest\src\NetArchTest.Rules\NetArchTest.Rules.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
