--- a/src/NetArchTest.Rules/NetArchTest.Rules.csproj
+++ b/src/NetArchTest.Rules/NetArchTest.Rules.csproj
@@ -16,11 +16,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Work\NetArchTest\src\NetArchTest.Rules\NetArchTest.Rules.xml</DocumentationFile>
+    <DocumentationFile>NetArchTest.Rules.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>D:\Work\NetArchTest\src\NetArchTest.Rules\NetArchTest.Rules.xml</DocumentationFile>
+    <DocumentationFile>NetArchTest.Rules.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
