Improving test coverage, and added implementations

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# Visual Studio Code files
+*.code-workspace
+launch.json
+tasks.json
