--- a/samples/NetArchTest.SampleLibrary/NetArchTest.SampleLibrary.csproj
+++ b/samples/NetArchTest.SampleLibrary/NetArchTest.SampleLibrary.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
