--- a/test/NetArchTest.TestStructure/NetArchTest.TestStructure.csproj
+++ b/test/NetArchTest.TestStructure/NetArchTest.TestStructure.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
