--- a/test/NetArchTest.TestStructure/NetArchTest.TestStructure.csproj
+++ b/test/NetArchTest.TestStructure/NetArchTest.TestStructure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
 </Project>
